# claws_mail_gnome_plugin

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
po/: Makevars  POTFILES.in
src/: Makefile.am  gettext.h  gnome_plugin.c
